# project-management

./: docker-compose.yml
microservices/api-gateway/: Dockerfile  Makefile  pyproject.toml
microservices/api-gateway/app/: main.py
microservices/api-gateway/app/pb/: auth_pb2.py  auth_pb2_grpc.py  user_pb2.py  user_pb2_grpc.py
microservices/authentication-service/: Dockerfile  Makefile  pyproject.toml
microservices/authentication-service/app/: main.py  services.py  utils.py
microservices/authentication-service/app/core/: config.py
microservices/authentication-service/app/pb/: user_pb2_grpc.py
microservices/authentication-service/certs/: jwt-private.pem  jwt-public.pem
microservices/protos/: auth.proto  user.proto
microservices/user-service/: Dockerfile  Makefile  alembic.ini  pyproject.toml
microservices/user-service/app/: exceptions.py  main.py  models.py  repositories.py  schemas.py  services.py  utils.py
microservices/user-service/app/core/: config.py  db.py  logger.py
microservices/user-service/app/migrations/: env.py
microservices/user-service/app/migrations/versions/: 2e524e96bd7a_initial_migration.py
microservices/user-service/app/pb/: auth_pb2.py  auth_pb2_grpc.py  user_pb2.py
